[tool.poetry]
name = "yourdfpy"
version = "0.0.52"
description = ""
authors = ["Clemens Eppner <clemens.eppner@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1,<3.11"
lxml = "^4.9.1"
numpy = "^1.19.1"
trimesh = "^3.12.9"
importlib-metadata = "^4.12.0"
zipp = "^3.8.1"
typing-extensions = "^4.3.0"
six = "^1.16.0"
pycollada = "^0.7.2"
Pillow = "^9.2.0"
pyglet = "^1.5.26"
scipy = "^1.7.1"
casadi = "3.5.6.pre2"

[tool.poetry.dev-dependencies]
setuptools = "^63.2.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
